--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+aniso8601==9.0.1
 asgiref==3.7.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==5.0.2
 djangorestframework==3.14.0
+graphene==3.3
+graphene-django==3.2.0
+graphql-core==3.2.3
+graphql-relay==3.2.0
 idna==3.6
+promise==2.3
 psycopg2-binary==2.9.9
 pytz==2024.1
 requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
+text-unidecode==1.3
 typing_extensions==4.10.0
 urllib3==2.2.1
